--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -432,6 +432,7 @@
 
 % Abbreviations
 \printglossaries
+% \printnoidxglossaries
 % \printunsrtglossaries cannot be used, because then no indexing happens; source: https://tex.stackexchange.com/a/287128/9075
 
 \microtypesetup{protrusion=true}
