--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -296,31 +296,66 @@
 \maketitle
 
 \begin{abstract}
-  \lipsum[1]
-\end{abstract}
+<% break; case "acmart": -%>
+\title{Paper Title}
+\author{First Author}
+\orcid{ORCID}
+\affiliation{%
+    \department{Department}
+    \institution{Institution}
+    \city{City}
+    \country{Country}
+}
+\email{first.last@example.com}
 
-\begin{keywords}
-  keyword1, keyword2
-\end{keywords}
+\begin{abstract}
+<% break; case "ieee": -%>
+% Enable following command if you need to typeset "IEEEpubid".
+% See https://bytefreaks.net/tag/ieeeoverridecommandlockouts for details.
+%\IEEEoverridecommandlockouts
 
-\section{Introduction}
-\label{sec:intro}
-\lipsum[1-3]\todo{Refine me}
+\title{Quick start for LaTeXing with IEEEtran.cls for\\ IEEE Computer Society Conferences}
 
-The remainder of the paper starts with a presentation of related work (\cref{sec:relatedwork}).
-<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:latexhints}).
-<% } -%>
-<% if (!examples && (documentclass == 'ieee')) { %>Afterwards, we present some Lorem Ipsum (\cref{sec:loremipsum}).
-<% } -%>
-Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:outlook}).
+\author{%
+  \IEEEauthorblockN{First Author, Second Author}
+  \IEEEauthorblockA{University of Examples, Germany\\
+    \{lastname\}@example.org}
+  \and
+  \IEEEauthorblockN{Third Author}
+  \IEEEauthorblockA{School of Electrical and\\Computer Examples\\
+    Georgia Institute of Examples\\
+    Atlanta, Georgia 30332--0250\\
+    \url{http://www.example.org}}
+}
 
-\section{Related Work}
-\label{sec:relatedwork}
+% use for special paper notices
+%\IEEEspecialpapernotice{(Invited Paper)}
 
-Winery~\cite{Winery} is a graphical \commentontext{modeling}{modeling with one ``l'', because of AE} tool.
-The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
-<%  break;
-default:  -%>
+% make the title area
+\maketitle
+
+% In case you want to add a copyright statement.
+% Works only in the compsoc conference mode.
+%
+% Source: https://tex.stackexchange.com/a/325013/9075
+%
+% All possible solutions:
+%  - https://tex.stackexchange.com/a/325013/9075
+%  - https://tex.stackexchange.com/a/279134/9075
+%  - https://tex.stackexchange.com/q/279789/9075 (TikZ)
+%  - https://tex.stackexchange.com/a/200330/9075 - for non-compsocc papers
+\iffalse
+  \IEEEoverridecommandlockouts
+  \IEEEpubid{\begin{minipage}{\textwidth}\ \\[12pt] \centering
+      1551-3203 \copyright 2015 IEEE.
+      Personal use is permitted, but republication/redistribution requires IEEE permission.
+      \\
+      See \url{https://www.ieee.org/publications_standards/publications/rights/index.html} for more information.
+    \end{minipage}}
+\fi
+
+\begin{abstract}
+<% break; case "scientific-thesis": -%>
 \pagenumbering{arabic}
 \Titelblatt
 
