--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -359,11 +359,8 @@
 \pagenumbering{arabic}
 \Titelblatt
 
-%Eigener Seitenstil fuer die Kurzfassung und das Inhaltsverzeichnis
-\deftriplepagestyle{preamble}{}{}{}{}{}{\pagemark}
-%Doku zu deftriplepagestyle: scrguide.pdf
-\pagestyle{preamble}
-\renewcommand*{\chapterpagestyle}{preamble}
+\pagestyle{plain.scrheadings}
+\renewcommand*{\chapterpagestyle}{plain.scrheadings}
 
 %Kurzfassung / abstract
 %auch im Stil vom Inhaltsverzeichnis
