--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -362,13 +362,50 @@
 \pagestyle{plain.scrheadings}
 \renewcommand*{\chapterpagestyle}{plain.scrheadings}
 
-%Kurzfassung / abstract
-%auch im Stil vom Inhaltsverzeichnis
+% Kurzfassung / abstract
+% auch im Stil vom Inhaltsverzeichnis
 \section*{Kurzfassung}
+<% break; default: -%>
+<% break; } -%>
+<% if (howtotext) { -%>
+\emph{Write an abstract for your work. Replace each of the points below with one sentence (two if you must) and you have your abstract. Write it when you finished your entire report.\footnote{https://www.easterbrook.ca/steve/2010/01/how-to-write-a-scientific-abstract-in-six-easy-steps/}}
 
+\emph{Introduction.} In one sentence, what’s the topic? Phrase it in a way that your reader will understand. If you’re writing a PhD thesis, your readers are the examiners – assume they are familiar with the general field of research, so you need to tell them specifically what topic your thesis addresses. Same advice works for scientific papers – the readers are the peer reviewers, and eventually others in your field interested in your research, so again they know the background work, but want to know specifically what topic your paper covers.
+
+\emph{State the problem you tackle.} What’s the key research question? Again, in one sentence. (Note: For a more general essay, I’d adjust this slightly to state the central question that you want to address) Remember, your first sentence introduced the overall topic, so now you can build on that, and focus on one key question within that topic. If you can’t summarize your thesis/paper/essay in one key question, then you don’t yet understand what you’re trying to write about. Keep working at this step until you have a single, concise (and understandable) question.
+
+\emph{Summarize (in one sentence) why nobody else has adequately answered the research question yet.} For a PhD thesis, you’ll have an entire chapter, covering what’s been done previously in the literature. Here you have to boil that down to one sentence. But remember, the trick is not to try and cover all the various ways in which people have tried and failed; the trick is to explain that there’s this one particular approach that nobody else tried yet (hint: it’s the thing that your research does). But here you’re phrasing it in such a way that it’s clear it’s a gap in the literature. So use a phrase such as “previous work has failed to address…”. (if you’re writing a more general essay, you still need to summarize the source material you’re drawing on, so you can pull the same trick – explain in a few words what the general message in the source material is, but expressed in terms of what’s missing)
+
+\emph{Explain, in one sentence, how you tackled the research question.} What’s your big new idea? (Again for a more general essay, you might want to adapt this slightly: what’s the new perspective you have adopted? or: What’s your overall view on the question you introduced in step 2?)
+
+\emph{In one sentence, how did you go about doing the research that follows from your big idea.} Did you run experiments? Build a piece of software? Carry out case studies? This is likely to be the longest sentence, especially if it’s a PhD thesis – after all you’re probably covering several years worth of research. But don’t overdo it – we’re still looking for a sentence that you could read aloud without having to stop for breath. Remember, the word ‘abstract’ means a summary of the main ideas with most of the detail left out. So feel free to omit detail! (For those of you who got this far and are still insisting on writing an essay rather than signing up for a PhD, this sentence is really an elaboration of sentence 4 – explore the consequences of your new perspective).
+
+\emph{As a single sentence, what’s the key impact of your research? Here we’re not looking for the outcome of an experiment.} We’re looking for a summary of the implications. What’s it all mean? Why should other people care? What can they do with your research. (Essay folks: all the same questions apply: what conclusions did you draw, and why would anyone care about them?)
+<% } else { -%>
 <Kurzfassung der Arbeit>
+<% } -%>
+<% switch (documentclass) { case "lncs": -%>
 
-\cleardoublepage
+\keywords{First keyword \and Second keyword \and Third keyword}
+\end{abstract}
+
+<% break; case "acmart": -%>
+\end{abstract}
+
+\maketitle
+<% break; case "ieee": -%>
+\end{abstract}
+
+% For peer review papers, you can put extra information on the cover
+% page as needed:
+% \ifCLASSOPTIONpeerreview
+% \begin{center} \bfseries EDICS Category: 3-BBND \end{center}
+% \fi
+%
+% For peerreview papers, this IEEEtran command inserts a page break and
+% creates the second title. It will be ignored for other modes.
+\IEEEpeerreviewmaketitle
+<% break; case "scientific-thesis": -%>
 
 \microtypesetup{protrusion=false}
 
@@ -394,7 +431,6 @@
 % Alternative: \listof{Listing}{List of Listings}
 \lstlistoflistings
 <% } else { -%>
-
 \listof{Listing}{Verzeichnis der Listings}
 <% } -%>
 
@@ -404,20 +440,16 @@
 %\listofalgorithms %Ist nur für Algorithmen, die mittels \begin{algorithm} umschlossen werden, nötig
 
 % Abkürzungsverzeichnis
-\printnoidxglossaries
+\printglossaries
+% \printnoidxglossaries
+% \printunsrtglossaries cannot be used, because then no indexing happens; source: https://tex.stackexchange.com/a/287128/9075
 
 \microtypesetup{protrusion=true}
 
 % Headline and footline
 \renewcommand*{\chapterpagestyle}{scrplain}
 \pagestyle{scrheadings}
-\pagestyle{scrheadings}
-\ihead[]{}
-\chead[]{}
-\ohead[]{\headmark}
-\cfoot[]{}
-\ofoot[\usekomafont{pagenumber}\thepage]{\usekomafont{pagenumber}\thepage}
-\ifoot[]{}
+<% break; default: -%>
 
 \chapter{Einleitung}
 In diesem Kapitel steht die Einleitung zu dieser Arbeit.
