--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -57,7 +57,7 @@
 
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
 % For the final version, replace "draftcls" by "final"
-\documentclass[<%= ieee_variant %>,<%= papersize %>paper]{IEEEtran}[2015/08/26]
+\documentclass[<%= ieee_variant %>,<%= papersize %>paper,ngerman]{IEEEtran}[2015/08/26]
 <% if (texlive >= 2021) { -%>
 
 % Balance the last page
