--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -716,7 +716,7 @@ The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } e
 
 <% if (examples) { -%>
 <%= heading1 %>{LaTeX Hinweise}
-\label{chap:latexhints}
+\label{sec:latexhints}
 
 <% if (useExampleEnvironment) { -%>
 % Benötigt für eine korrekte Darstellung der Hinweise im erzeugten PDF
