--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -702,7 +702,7 @@ Zuerst werden Grundlagen und verwandte Arbeiten vorgestellt (\cref{sec:relatedwo
 <% } -%>
 <% if (!examples && (documentclass == 'ieee')) { %>Afterwards, we present some Lorem Ipsum (\cref{sec:loremipsum}).
 <% } -%>
-Schließlich fasst \cref{sec:outloo} die Ergebnisse der Arbeit zusammen und stellt Anknüpfungspunkte vor.
+Schließlich fasst \cref{sec:outlook} die Ergebnisse der Arbeit zusammen und stellt Anknüpfungspunkte vor.
 
 <%= heading1 %>{Verwandte Arbeiten}
 \label{sec:relatedwork}
