Fix book reference

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -692,8 +692,8 @@ An interpretation can only be followed after all results have been described. Th
 <% } else { -%>
 <%= heading1 %>{Einleitung}
 \label{sec:introduction}
-In diesem Abschnitt/Kapitel steht die Einleitung zu dieser Ausarbeitung.
-Sie soll nur als Beispiel dienen und hat nichts mit dem Buch \cite{WSPA} zu tun.
+Hier steht die Einleitung zu dieser Ausarbeitung.
+Sie soll nur als Beispiel dienen.
 Nun viel Erfolg bei der Arbeit!
 
 Die Arbeit ist in folgender Weise gegliedert:
