--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -49,25 +49,17 @@
 \documentclass[runningheads,<%= papersize %>paper,ngerman]{llncs}[2022/01/12]
 <% break; case "acmart": -%>
 
-<% if (texlive >= 2021) { -%>
-% We balance the last page using the package "pbalance" (see https://ctan.org/pkg/pbalance), because it "just works" (in contrast to balance.sty or other solutions)
-<% } -%>
-\documentclass[<%= acm_format %>,<% if (acm_review) { %>review,<% } %><%= papersize %>paper,<% if (texlive >= 2021) { %>pbalance<% } else { %>balance<% } %>]{acmart}
+% Alternative to balance is the pbalance package (see https://ctan.org/pkg/pbalance), which sometimes works better
+\documentclass[<%= acm_format %>,<% if (acm_review) { %>review,<% } %><%= papersize %>paper,balance]{acmart}
 <% break; case "ieee": -%>
 
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
 % For the final version, replace "draftcls" by "final"
 \documentclass[<%= ieee_variant %>,<%= papersize %>paper,ngerman]{IEEEtran}[2015/08/26]
-<% if (texlive >= 2021) { -%>
-
-% Balance the last page
-% The pbalance package (see https://ctan.org/pkg/pbalance) "just works" (in contrast to balance.sty or other solutions)
-\usepackage{pbalance}
-<% } else { -%>
 
 % Balance the last page using the balance package (see https://ctan.org/pkg/balance)
+% Alternative to balance is the pbalance package (see https://ctan.org/pkg/pbalance), which sometimes works better
 \usepackage{balance}
-<% } -%>
 <% break; case "scientific-thesis": -%>
 
 % The following package allows \\ at the title page
