--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -174,7 +174,7 @@
 \usepackage{stfloats}
 \fnbelowfloat
 
-<%- include('siunitx.preamble.en.tex'); %>
+<%- include('siunitx.preamble.de.tex'); %>
 <%- include('hyperref.preamble.de.tex', this); %>
 <%- include('subfig.preamble.en.tex', this); %>
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %>
