--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -47,7 +47,7 @@
 
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
 % For the final version, replace "draftcls" by "final"
-\documentclass[<%= ieee_variant %>,<%= papersize %>paper,english]{IEEEtran}[2015/08/26]
+\documentclass[<%= ieeevariant %>,<%= papersize %>paper,english]{IEEEtran}[2015/08/26]
 
 % Balance the last page using the balance package (see https://ctan.org/pkg/balance)
 % Alternative to balance is the pbalance package (see https://ctan.org/pkg/pbalance), which sometimes works better
