--- a/generators/app/templates/csquotes.example.de.tex
+++ b/generators/app/templates/csquotes.example.de.tex
@@ -4,7 +4,7 @@
 Bitte das \enquote{enquote-Makro} verwenden, um etwas in Anführungszeichen zu setzen.
 Alternativ ist es auch über "`möglich"', Wörter in Anführungszeichen zu setzen.
 
-<% if (tweak_outerquote == "outerquote")  { -%>
+<% if (tweakouterquote == "outerquote")  { -%>
 Das Feature "MakeOuterQuote" wurde auch aktiviert, weshalb "einfache" Anführungszeichen auch genutzt werden können.
 Achtung! Dieses Feature ist weitgehend unbekannt, so dass man ab und an falsche Anführungszeichen in \LaTeX-Dokumenten sieht.
 Siehe \url{https://tex.stackexchange.com/a/150958/9075} für Details bezüglich dieser Lösung.
