--- a/generators/app/templates/hyphenation.example.en.tex
+++ b/generators/app/templates/hyphenation.example.en.tex
@@ -9,7 +9,7 @@ Here are some hints:
 In case you write <%- bquote %>application-specific<%- equote %>, then the word will only be hyphenated at the dash.
 You can also write \verb1applica\allowbreak{}tion-specific1 (result: applica\allowbreak{}tion-specific), but this is much more effort.
 
-<% if (tweak_outerquote == "outerquote")  { -%>
+<% if (tweakouterquote == "outerquote")  { -%>
 In the net, you will read about that one can use a normal quote sign followed by an equal sign (\verb1"=1) to specify that hyphenation is allowed at other places in the word.
 Since we use the quote sign for automatic quoation, this is not possible anymore.
 Please use the command \verb1\hydash1 for the same purpose.
