--- a/generators/app/templates/natbib.preamble.en.tex
+++ b/generators/app/templates/natbib.preamble.en.tex
@@ -4,7 +4,7 @@
 % Alternative: \usepackage{cite}, which enables \cite{ref1, ref2} only (otherwise: Error message: "White space in argument")
 
 % Doc: http://texdoc.net/natbib
-<% if (ieee_compsoc) { -%>
+<% if (ieeecompsoc) { -%>
 %\ifCLASSOPTIONcompsoc
 % IEEE Computer Society needs nocompress option at cite.sty
 % natbib includes the same functionality
