--- a/generators/app/templates/subfig.preamble.en.tex
+++ b/generators/app/templates/subfig.preamble.en.tex
@@ -1,4 +1,4 @@
-<% if (ieee_compsoc) { -%>
+<% if (ieeecompsoc) { -%>
 \usepackage[caption=false,font=footnotesize,labelfont=sf,textfont=sf]{subfig}
 <% } else { -%>
 \usepackage[caption=false,font=footnotesize]{subfig}
