--- a/generators/app/templates/babel.preamble.de.tex
+++ b/generators/app/templates/babel.preamble.de.tex
@@ -1,6 +1,6 @@
 % Setze Deutsch als Sprache
 \usepackage[english,main=ngerman]{babel}
-<% if (tweak_outerquote == "babel")  { -%>
+<% if (tweakouterquote == "babel")  { -%>
 %
 % Hinweis von http://tex.stackexchange.com/a/321066/9075
 % Ermögliche die Benutzung von "= als Trennstriche
