Fix cleveref error

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -165,6 +165,7 @@
 <%- include('subfig.preamble.en.tex', this); %>
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %>
 <% } -%>
+<% if (feature.acronyms) { -%>\usepackage{amsmath}<% } // acronyms load amsmath, which has to be loaded before cleveref -%>
 <%- include('cleveref.preamble.en.tex', this); %>
 \usepackage{lipsum}
 <% if (examples) { -%>
