--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -179,6 +179,7 @@
 <%- include('subfig.preamble.en.tex', this); %>
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %>
 <% } -%>
+<% if (feature.acronyms) { -%>\usepackage{amsmath}<% } // acronyms load amsmath, which has to be loaded before cleveref -%>
 <%- include('cleveref.preamble.de.tex', this); %>
 \usepackage{lipsum}
 <% if (examples) { -%>
