--- a/generators/app/templates/microtype.preamble.de.tex
+++ b/generators/app/templates/microtype.preamble.de.tex
@@ -1,11 +1,13 @@
 % Optischer Randausgleich und Grauwertkorrektur. Siehe See http://www.ctan.org/tex-archive/macros/latex/contrib/microtype/
 
+<% if (documentclass == 'acmart') { -%>
 \usepackage[
   babel=true,
   expansion=alltext,
   protrusion=alltext-nott,
   final
 ]{microtype}
+<% } -%>
 
 % \texttt{test -- test} - diese Einstellung behält "--" bei (und konveriert sie nicht zu einem Bindestrich)
 \DisableLigatures{encoding = T1, family = tt* }
