fix list of listings for minted

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -424,7 +424,7 @@
 % Alternative: \listof{Listing}{List of Listings}
 \lstlistoflistings
 <% } else { -%>
-\listof{Listing}{Verzeichnis der Listings}
+\listoflistings
 <% } -%>
 
 %mittels \newfloat wurde die Algorithmus-Gleitumgebung definiert.
