--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -415,7 +415,7 @@
 % Alternative: \listof{Listing}{List of Listings}
 \lstlistoflistings
 <% } else { -%>
-\listof{Listing}{List of Listings}
+\listoflistings
 <% } -%>
 
 %mittels \newfloat wurde die Algorithmus-Gleitumgebung definiert.
