Really fix microtype for ACM

--- a/generators/app/templates/microtype.preamble.de.tex
+++ b/generators/app/templates/microtype.preamble.de.tex
@@ -1,6 +1,9 @@
 % Optischer Randausgleich und Grauwertkorrektur. Siehe See http://www.ctan.org/tex-archive/macros/latex/contrib/microtype/
 
 <% if (documentclass == 'acmart') { -%>
+% microtype wird bereits von der ACM-Klasse geladen.
+% Wir müssen "nur" ein paar Optionen anpassen.
+<% } else { -%>
 \usepackage[
   babel=true,
   expansion=alltext,
