Modernize loading of ngerman hyphenation patterns

--- a/generators/app/templates/babel.preamble.de.tex
+++ b/generators/app/templates/babel.preamble.de.tex
@@ -1,5 +1,7 @@
 % Setze Deutsch als Sprache
 \usepackage[english,main=ngerman]{babel}
+% Neue deutsche Trennmuster
+\babelprovide[hyphenrules=ngerman-x-latest]{german}
 <% if (tweakouterquote == "babel")  { -%>
 %
 % Hinweis von http://tex.stackexchange.com/a/321066/9075
