--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -100,7 +100,7 @@
 %   - https://tex.stackexchange.com/a/166791/9075
 \usepackage{upquote}
 
-<%- include('babel.preamble.de.tex', this); %>
+<%- include('babel.preamble.de.tex', this); -%>
 
 <%- include('url.preamble.de.tex', this); -%>
 <%# ACM already provides a very good font configuration; thus we do not need to override it -%>
@@ -192,10 +192,6 @@
 <%- include('powerset.preamble.en.tex', this); -%>
 
 \usepackage{xspace}
-%\newcommand{\eg}{e.\,g.\xspace}
-%\newcommand{\ie}{i.\,e.\xspace}
-\newcommand{\eg}{e.\,g.,\ }
-\newcommand{\ie}{i.\,e.,\ }
 
 % Enable hyphenation at other places as the dash.
 % Example: applicaiton\hydash specific
@@ -769,7 +765,7 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <% if (enquotes == 'plainlatex') { %><%- include('plainlatex.enquotes.example.de.tex', this); %>
 <% } -%>
 <%- include('cleveref.example.en.tex', this); %>
-<%- include('figure.example.de.tex', this); %>
+<%- include('figure.example.de.tex', this); -%>
 <%- include('subfloat.example.en.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
 <% if (listings == 'listings') { -%>
