--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -184,10 +184,8 @@
 <%- include('powerset.preamble.en.tex', this); -%>
 
 \usepackage{xspace}
-%\newcommand{\eg}{e.\,g.\xspace}
-%\newcommand{\ie}{i.\,e.\xspace}
-\newcommand{\eg}{e.\,g.,\ }
-\newcommand{\ie}{i.\,e.,\ }
+\newcommand{\eg}{e.g.,\ }
+\newcommand{\ie}{i.e.,\ }
 
 % Enable hyphenation at other places as the dash.
 % Example: applicaiton\hydash specific
