--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -10,7 +10,7 @@
   \label{fig:label}
 \end{figure}
 <%- eexample %>
-<%- include('floatflt.example.en.tex', this); %>
+<%- include('floatflt.example.en.tex', this); -%>
 <% if (documentclass == 'ieee') { -%>
 
 One can span a figure across multiple columns by using \verb+\begin{figure*}+.
