--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -27,7 +27,7 @@
 % This option  present, because the current word template offered by Springer is DIN A4.
 % We accept that DIN A4 cause WTFs at persons not used to A4 in USA.
 %
-% "runningheads":
+% "runningheads" führt zu folgendem:
 %
 %  - zeigt Author + Titel auf jeder Seite.
 %  - Während des Schreibens und das Review des Papers hilft das, um z.B. auf konkrete Seitenzahlen einfach verweisen zu können.
@@ -37,7 +37,7 @@
 % blindly opening the folder, one could hit not the title page, but an arbitrary page. Therefore,
 % it is good to have title printed on the pages, too.
 %
-% Diese Option nach Aufforderung durch die Herausgeber entfernen.
+% Die Option "runningheads" ist nach Aufforderung durch die Herausgeber entfernen.
 %
 % To disable outputting page headers and footers, remove "runningheads"
 \documentclass[runningheads,<%= papersize %>paper,ngerman]{llncs}[2022/01/12]
@@ -69,8 +69,8 @@
   % abschließender Punkt (siehe [DUD96, R4])
   numbers=autoendperiod,
   ngerman,  % Neue deutsche Rechtschreibung; der Parameter wird an andere Pakete weiter gegeben
-  a4paper,  % Standard format - only KOMAScript uses paper=a4 - https://tex.stackexchange.com/a/61044/9075
-  twoside,  % we are optimizing for both screen and two-side printing. So the page numbers will jump, but the content is configured to stay in the middle (by using the geometry package)
+  a4paper,  % KOMAScript allows for both paper=a4 and (standard) a4paper - https://tex.stackexchange.com/a/61044/9075
+  twoside,  % We are optimizing for both screen and two-side printing. So the page numbers will jump, but the content is configured to stay in the middle (by using the geometry package)
   bibliography=totoc,
   % idxtotoc,   % Index ins Inhaltsverzeichnis
   % liststotoc, % List of * ins Inhaltsverzeichnis, mit liststotocnumbered werden die Abbildungsverzeichnisse nummeriert
@@ -87,10 +87,35 @@
 \cfoot[]{}
 \ofoot[\usekomafont{pagenumber}\thepage]{\usekomafont{pagenumber}\thepage}
 \ifoot[]{}
+<% break; case "ustutt": -%>
+
+\documentclass[
+  % fontsize=11pt is the standard
+  numbers=noenddot,
+  english,  % English as main language; this parameter is passed to other packages (e.g., selnolig in the case of lualatex)
+  paper=a5,
+  twoside,  % we are optimizing for both screen and two-side printing. So the page numbers will jump, but the content is configured to stay in the middle (by using the geometry package)
+  DIV=calc,
+  headings=small,
+  bibliography=totoc,
+  % idxtotoc,   % Index ins Inhaltsverzeichnis
+  % liststotoc, % List of * ins Inhaltsverzeichnis, mit liststotocnumbered werden die Abbildungsverzeichnisse nummeriert
+  lsitof=totoc,
+  % headsepline,
+  % cleardoublepage=empty,
+  % parskip=half,
+  %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
+  draft=false
+]{scrbook}
 <% break; default: -%>
 
 % not yet supported template. Please report to the author of generator-latex-template
 \documentclass{scrbook}
+<% } -%>
+
+<% if (latexcompiler == "both") { -%>
+\usepackage{iftex}
+
 <% } -%>
 
 % backticks (`) werden als solches in verbatim-Umgebungen dargestellt
@@ -106,7 +131,6 @@
 <%# ACM already provides a very good font configuration; thus we do not need to override it -%>
 <% if (documentclass != 'acmart') { %>
 <%- include('font.preamble.en.tex', this); -%>
-<% } -%>
 
 <%- include('microtype.preamble.de.tex', this); -%>
 
@@ -190,6 +214,14 @@
 <% } -%>
 
 <%- include('powerset.preamble.en.tex', this); -%>
+<% if (documentclass == 'ustutt') { -%>
+
+\usepackage{shared/titlepage}
+
+% binding correction
+\setlength{\evensidemargin}{-24pt}
+\setlength{\oddsidemargin}{-24pt}
+<% } -%>
 
 \usepackage{xspace}
 
@@ -230,7 +262,11 @@
 <% if (feature.acronyms) { -%><%- include('acronyms.preamble.en.tex', this); %><% } -%>
 <%- include('scientific-thesis-cover.preamble.en.tex', this); %>
 <% break; } -%>
-<% if (latexcompiler == "pdflatex") { -%>
+<% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { -%>
+<% if (latexcompiler == "both") { -%>
+
+\ifpdftex
+<% } -%>
 
 % Enable copy and paste of text from the PDF
 % Only required for pdflatex. It "just works" in the case of lualatex.
@@ -243,6 +279,9 @@
 % According to https://tex.stackexchange.com/q/451235/9075 this is the way to go
 \input glyphtounicode
 \pdfgentounicode=1
+<% if (latexcompiler == "both") { -%>
+\fi
+<% } -%>
 <% } -%>
 
 \begin{document}
