--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -199,7 +199,19 @@
 \newcommand{\hydash}{\penalty\@M-\hskip\z@skip}
 % Definition of "= taken from http://mirror.ctan.org/macros/latex/contrib/babel-contrib/german/ngermanb.dtx
 \makeatother
+<% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { -%>
 
+<% if (latexcompiler == "both") { -%>
+\ifluatex
+<% } -%>
+% Enable correct rendering of ligatures - provided by https://ctan.org/pkg/autotype
+% See ADR-0008 for alternatives
+\usepackage{autotype}
+<% if (latexcompiler == "both") { -%>
+\fi
+<% } -%>
+
+<% } -%>
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
 <% switch (documentclass) { case "acmart": -%>
@@ -246,6 +258,18 @@
 <% } -%>
 
 \begin{document}
+<% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { -%>
+<% if (latexcompiler == "both") { -%>
+\ifluatex
+<% } -%>
+% Enable correct rendering of ligatures - provided by https://ctan.org/pkg/autotype
+% See ADR-0008 for alternatives
+\autotypelangoptions{ngerman}{ligbreak}
+<% if (latexcompiler == "both") { -%>
+\fi
+<% } -%>
+
+<% } -%>
 <% switch (documentclass) { case "lncs": -%>
 
 \title{Paper Title}
