--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -1051,7 +1051,7 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 % Enfore empty line after bibliography
 \ \\
 %
-\noindnet
+\noindent
 Alle Links wurden zuletzt am 29.03.2021 geprüft.
 
 <% switch (documentclass) { case "lncs": -%>
